[project]
name = "nanda-mech-interp"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Alok Singh", email = "alokbeniwal@gmail.com" }]
dependencies = [
    "transformer-lens>=1.15",
    "einops>=0.7",
    "fancy-einsum>=0.0",
    "torch>=2",
    "jaxtyping>=0.2",
    "pip>=24",
    "ipykernel>=6",
    "circuitsvis>=1",
    "ipython>=8",
    "datasets>=2",
    "tqdm>=4",
    "huggingface>=0.0",
    "huggingface-hub>=0.22",
    "numpy>=1",
    "plotly>=5",
    "rich>=13",
    "pytest>=8",
    "hypothesis>=6",
    "notebook>=7",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nanda_mech_interp"]
# [tool.rye.workspace]
# members = ["src", "deps/CircuitsVis", "deps/TransformerLens"]
